src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Agent_To_Call_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If ticked the agent that last updated the task must call back the customer</description>
        <inlineHelpText>If ticked the agent that last updated the task must call back the customer</inlineHelpText>
        <label>Agent To Call Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Await_Call_Back_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Specify the number of minutes to wait before csp is allowed to call back</description>
        <inlineHelpText>Specify the number of minutes to wait before user is allowed to call back</inlineHelpText>
        <label>Await Call Back Time</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateCallBack__c</fullName>
        <description>Specify the date when the csp is allowed to call back. This must be provided along with the hour and the minute to call back</description>
        <inlineHelpText>Specify the date when the user is allowed to call back. This must be provided along with the hour and the minute to call back</inlineHelpText>
        <label>DateCallBack</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_since_created__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_For_Call__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes to internal offers</fullName>
                </value>
                <value>
                    <fullName>No to internal offers</fullName>
                </value>
                <value>
                    <fullName>Already receives internal offers</fullName>
                </value>
                <value>
                    <fullName>General information</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>TMG Subscriber Availability</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Did not offer activation</fullName>
                </value>
                <value>
                    <fullName>Successful live mobile activation</fullName>
                </value>
                <value>
                    <fullName>Successful live iPad activation</fullName>
                </value>
                <value>
                    <fullName>Already activated (iPad)</fullName>
                </value>
                <value>
                    <fullName>Already activated (smartphone)</fullName>
                </value>
                <value>
                    <fullName>Customer will activate in own time (smartphone)</fullName>
                </value>
                <value>
                    <fullName>Customer will activate in own time (iPad)</fullName>
                </value>
                <value>
                    <fullName>Declined mobile activation</fullName>
                </value>
                <value>
                    <fullName>Declined iPad activation</fullName>
                </value>
                <value>
                    <fullName>Does not have iPad</fullName>
                </value>
                <value>
                    <fullName>Does not have smartphone</fullName>
                </value>
                <value>
                    <fullName>Voucher Query</fullName>
                </value>
                <value>
                    <fullName>Change Of Newsagent</fullName>
                </value>
                <value>
                    <fullName>Voucher Resend (missing/not received)</fullName>
                </value>
                <value>
                    <fullName>Change of voucher type</fullName>
                </value>
                <value>
                    <fullName>CC Payment Query</fullName>
                </value>
                <value>
                    <fullName>DD Payment Query</fullName>
                </value>
                <value>
                    <fullName>DD Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Amendment to bank details</fullName>
                </value>
                <value>
                    <fullName>Loyalty – Clubs</fullName>
                </value>
                <value>
                    <fullName>Loyalty – Offers</fullName>
                </value>
                <value>
                    <fullName>Loyalty – Events</fullName>
                </value>
                <value>
                    <fullName>Loyalty - Response to Sub Mailing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Further_Detail_2__c</fullName>
        <label>Further Detail 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Further_Detail__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Comments</fullName>
                </value>
                <value>
                    <fullName>Favourites</fullName>
                </value>
                <value>
                    <fullName>Galleries</fullName>
                </value>
                <value>
                    <fullName>Images</fullName>
                </value>
                <value>
                    <fullName>Live View</fullName>
                </value>
                <value>
                    <fullName>Sharing</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Puzzles</fullName>
                </value>
                <value>
                    <fullName>Email change</fullName>
                </value>
                <value>
                    <fullName>Reset password</fullName>
                </value>
                <value>
                    <fullName>Entitlement Issues</fullName>
                </value>
                <value>
                    <fullName>Remember Me &amp; Cookies</fullName>
                </value>
                <value>
                    <fullName>Buy Edition</fullName>
                </value>
                <value>
                    <fullName>Cartoons</fullName>
                </value>
                <value>
                    <fullName>Prize Crossword (Sat)</fullName>
                </value>
                <value>
                    <fullName>Non-receipt</fullName>
                </value>
                <value>
                    <fullName>Unsubscribe</fullName>
                </value>
                <value>
                    <fullName>Moderation Policy</fullName>
                </value>
                <value>
                    <fullName>Profile Issues</fullName>
                </value>
                <value>
                    <fullName>User Disputes</fullName>
                </value>
                <value>
                    <fullName>Mobile Website</fullName>
                </value>
                <value>
                    <fullName>Browser Issues</fullName>
                </value>
                <value>
                    <fullName>Broken Links</fullName>
                </value>
                <value>
                    <fullName>Navigation Speed</fullName>
                </value>
                <value>
                    <fullName>Price Increase</fullName>
                </value>
                <value>
                    <fullName>Free Trial</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price Negotiation</fullName>
                </value>
                <value>
                    <fullName>Through Service</fullName>
                </value>
                <value>
                    <fullName>Look and Feel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Further_Detail__c</fullName>
        <label>Further Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Detail__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Newspaper Edition App - iOS &gt; Troubleshooting &gt; App Features</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - iOS &gt; Troubleshooting &gt; Speed &amp; Performance</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - iOS &gt; Feedback &gt; Against</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - iOS &gt; Feedback &gt; For</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - iOS &gt; Feedback &gt; Misc</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - iOS &gt; Troubleshooting &gt; Telegraph Login</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - Android &gt; Troubleshooting &gt; Telegraph Login</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - Android &gt; Feedback &gt; Against</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - Android &gt; Feedback &gt; Misc</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - Android &gt; Feedback &gt; For</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - Android &gt; Troubleshooting &gt; Speed &amp; Performance</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - Android &gt; Troubleshooting &gt; App Features</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - Amazon &gt; Troubleshooting &gt; Telegraph Login</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - Amazon &gt; Troubleshooting &gt; App Features</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - Amazon &gt; Troubleshooting &gt; Speed &amp; Performance</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - Amazon &gt; Feedback &gt; For</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - Amazon &gt; Feedback &gt; Against</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - Amazon &gt; Feedback &gt; Misc</fullName>
                </value>
                <value>
                    <fullName>Telegraph App - iOS &gt; Troubleshooting &gt; App Features</fullName>
                </value>
                <value>
                    <fullName>Telegraph App - iOS &gt; Troubleshooting &gt; Speed &amp; Performance</fullName>
                </value>
                <value>
                    <fullName>Telegraph App - Android &gt; Troubleshooting &gt; App Features</fullName>
                </value>
                <value>
                    <fullName>Telegraph App - Android &gt; Troubleshooting &gt; Speed &amp; Performance</fullName>
                </value>
                <value>
                    <fullName>Against</fullName>
                </value>
                <value>
                    <fullName>For</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
                <value>
                    <fullName>Apple Subs Info</fullName>
                </value>
                <value>
                    <fullName>Download Instructions</fullName>
                </value>
                <value>
                    <fullName>Features &amp; Functionality</fullName>
                </value>
                <value>
                    <fullName>Telegraph Login</fullName>
                </value>
                <value>
                    <fullName>Website &gt; Troubleshooting &gt; Telegraph Login</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hour_Call_Back__c</fullName>
        <description>Specify the hour when the csp is allowed to call back. This must be provided along with the date and the minute to call back</description>
        <inlineHelpText>Specify the hour when the user is allowed to call back. This must be provided along with the date and the minute to call back</inlineHelpText>
        <label>Hour Call Back</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InterviewURL__c</fullName>
        <formula>If( Spark_ID__c &lt;&gt;&quot;&quot;, &quot;http://tmg.sparkstudiosaas.com:80/audit?loadSpaceID=&quot;&amp;Space_ID__c &amp;&quot;&amp;loadSparkID=&quot;&amp;Spark_ID__c&amp;&quot;&amp;loadInterviewID=&quot;&amp;Interview_ID__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interview Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_ID__c</fullName>
        <description>Firefly Interview ID</description>
        <label>Interview ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_S__c</fullName>
        <label>M&amp;S</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>£5</fullName>
                </value>
                <value>
                    <fullName>£10</fullName>
                </value>
                <value>
                    <fullName>£15</fullName>
                </value>
                <value>
                    <fullName>£20</fullName>
                </value>
                <value>
                    <fullName>£25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Voucher__c</fullName>
        <label>Manual Voucher</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>1 Week</fullName>
                </value>
                <value>
                    <fullName>2 Weeks</fullName>
                </value>
                <value>
                    <fullName>3 Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minute_Call_Back__c</fullName>
        <description>Specify the minute when the csp is allowed to call back. This must be provided along with the date and the hour to call back</description>
        <inlineHelpText>Specify the minute when the user is allowed to call back. This must be provided along with the date and the hour to call back</inlineHelpText>
        <label>Minute Call Back</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Sale_Reason__c</fullName>
        <label>No Sale Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Outcome__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Will renew in own time</fullName>
                </value>
                <value>
                    <fullName>Price increase</fullName>
                </value>
                <value>
                    <fullName>No local participating newsagents</fullName>
                </value>
                <value>
                    <fullName>No delivery available</fullName>
                </value>
                <value>
                    <fullName>Too much weekend content</fullName>
                </value>
                <value>
                    <fullName>Dislike editorial content</fullName>
                </value>
                <value>
                    <fullName>Holiday voucher return too rigid</fullName>
                </value>
                <value>
                    <fullName>Prefer other publication</fullName>
                </value>
                <value>
                    <fullName>Unhappy paying in advance</fullName>
                </value>
                <value>
                    <fullName>Want same perks as new subscribers</fullName>
                </value>
                <value>
                    <fullName>Prefer to send cheque</fullName>
                </value>
                <value>
                    <fullName>Broadsheet too large</fullName>
                </value>
                <value>
                    <fullName>Competitor offers are better</fullName>
                </value>
                <value>
                    <fullName>Partially sighted/illness</fullName>
                </value>
                <value>
                    <fullName>Moved to a Care Home/Nursing Home</fullName>
                </value>
                <value>
                    <fullName>Difficulty in redeeming loyalty offers</fullName>
                </value>
                <value>
                    <fullName>Participating loyalty rewards not local enough</fullName>
                </value>
                <value>
                    <fullName>Scheduled Callback</fullName>
                </value>
                <value>
                    <fullName>Kindle Offer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OB_Call_Formula__c</fullName>
        <description>Assigns a number based on the status to be used as the sort of the OBCalling Apex Code.</description>
        <formula>CASE (Status, &quot;Not Started&quot;, 1, &quot;In Progress&quot;, 2, &quot;Waiting on someone else&quot;, 3, &quot;Deferred&quot;, 4,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OB Calling Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outbound_Calling_Viewed_Date__c</fullName>
        <description>Date on which the task was viewed in the outbound calling tab.</description>
        <label>Outbound Calling Viewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outbound_Calling_Viewed_Datetime__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Outbound Calling Viewed Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outbound_Calling_Viewed_Stamp__c</fullName>
        <label>Outbound Calling Viewed DateTime Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>No Sale</fullName>
                </value>
                <value>
                    <fullName>Cheque Sales</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Answerphone</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Reschedule</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Renewal Details Sent</fullName>
                </value>
                <value>
                    <fullName>No phone number</fullName>
                </value>
                <value>
                    <fullName>Cheque Received</fullName>
                </value>
                <value>
                    <fullName>Called customer - CC payment taken</fullName>
                </value>
                <value>
                    <fullName>Called customer - Cheque sent</fullName>
                </value>
                <value>
                    <fullName>Called customer - Refused to pay</fullName>
                </value>
                <value>
                    <fullName>Called customer - customer will call back</fullName>
                </value>
                <value>
                    <fullName>DD Already Paid</fullName>
                </value>
                <value>
                    <fullName>Duplicate Task</fullName>
                </value>
                <value>
                    <fullName>Suspension letter sent</fullName>
                </value>
                <value>
                    <fullName>No Action Required</fullName>
                </value>
                <value>
                    <fullName>Refund Due</fullName>
                </value>
                <value>
                    <fullName>Data Corrected</fullName>
                </value>
                <value>
                    <fullName>Auto write off</fullName>
                </value>
                <value>
                    <fullName>Additional Payment</fullName>
                </value>
                <value>
                    <fullName>1st Collection Letter Sent</fullName>
                </value>
                <value>
                    <fullName>2nd Collection Letter Sent</fullName>
                </value>
                <value>
                    <fullName>Final Collection Letter Sent</fullName>
                </value>
                <value>
                    <fullName>Retention - Phone</fullName>
                </value>
                <value>
                    <fullName>Retention - Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Priority_Score__c</fullName>
        <formula>IF(Priority_Score__c &gt;= 0, Priority_Score__c + Sub_Weekly_Price__c, Priority_Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Priority Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Score__c</fullName>
        <formula>IF( Viewed_Timestamp_Critical__c , -2, IF(OR( ISPICKVAL( Status , &apos;Completed&apos;) , ISNULL( Scheduled_Callback__c )),0, (NOW() - Scheduled_Callback__c)*1440))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_Call__c</fullName>
        <description>Reason for customers call.</description>
        <inlineHelpText>Reason for customers call.</inlineHelpText>
        <label>Reason For Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Freepost Address</fullName>
                </value>
                <value>
                    <fullName>Batchwork</fullName>
                </value>
                <value>
                    <fullName>Cashposting</fullName>
                </value>
                <value>
                    <fullName>Vouchers</fullName>
                </value>
                <value>
                    <fullName>Payment Issue</fullName>
                </value>
                <value>
                    <fullName>Updating Address</fullName>
                </value>
                <value>
                    <fullName>Goodwill Holiday Enquiry</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
                <value>
                    <fullName>Subscriber Retained</fullName>
                </value>
                <value>
                    <fullName>Supplement Request</fullName>
                </value>
                <value>
                    <fullName>Subscriber Card Request</fullName>
                </value>
                <value>
                    <fullName>Department Transfer</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - iOS</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - Android</fullName>
                </value>
                <value>
                    <fullName>Newspaper Edition App - Amazon</fullName>
                </value>
                <value>
                    <fullName>Telegraph App - iOS</fullName>
                </value>
                <value>
                    <fullName>Telegraph App - Android</fullName>
                </value>
                <value>
                    <fullName>Kindle</fullName>
                </value>
                <value>
                    <fullName>Windows 8</fullName>
                </value>
                <value>
                    <fullName>Travel Guides</fullName>
                </value>
                <value>
                    <fullName>Blackberry</fullName>
                </value>
                <value>
                    <fullName>Digital - Other</fullName>
                </value>
                <value>
                    <fullName>Remove from database</fullName>
                </value>
                <value>
                    <fullName>Print Other</fullName>
                </value>
                <value>
                    <fullName>Digital Payment failure</fullName>
                </value>
                <value>
                    <fullName>Surprise and Delight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reduce_Price__c</fullName>
        <label>Reduce Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Callback__c</fullName>
        <description>Date/Time field for new outbound call task filter logic</description>
        <label>Scheduled Callback</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Space_ID__c</fullName>
        <description>Firefly Space ID</description>
        <label>Space ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spark_ID__c</fullName>
        <description>Firefly Spark ID</description>
        <label>Spark ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Weekly_Price__c</fullName>
        <label>Sub Weekly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEST__c</fullName>
        <formula>NOW() -  Outbound_Calling_Viewed_Datetime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Tag__c</fullName>
        <label>Task Tag</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewed_Timestamp_Critical__c</fullName>
        <formula>(NOW()- Outbound_Calling_Viewed_Stamp__c )*1440 &lt; 29</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viewed Timestamp Critical</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>